# list_your_publications

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
docs/: README.md  conf.py  index.rst
docs/tutorial/: tutorial.ipynb
src/orcidpubs/: __init__.py  __main__.py  query.py
tests/: test_pkg.py
