[project]
authors = [
  {name = "Henry Webel", email = "henry.webel@sund.ku.dk"},
]
description = "Fetch your ORCID publications as a markdown file."
name = "list-publications"
# This means: Load the version from the package itself.
# See the section below: [tools.setuptools.dynamic]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
# These are keywords
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'pandas',
    'rich',
]

[project.scripts]
fetch_orcid_pubs = "orcidpubs.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/RasmussenLab/list_your_publications/issues"
"Homepage" = "https://github.com/RasmussenLab/list_your_publications"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-nb",
  "ipywidgets",
  "sphinx-new-tab-link!=0.2.2",
]

# Configure the Ruff linter: Ignore error number 501
[tool.ruff]
ignore = ["E501"]

[tool.flake8]
max-line-length = 120

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/ 
# used to pick up the version from the git tags or the latest commit.
